--- a/src/components/Navigation/styles.module.css
+++ b/src/components/Navigation/styles.module.css
@@ -27,12 +27,23 @@
 }
 
 .btn {
-    padding: .5rem 1rem;
+    padding: .5rem 2rem;
     background: #5CC6D0;
-    border-radius: 10px;
+    border-radius: 30px;
     color: white;
     float: right;
-    text-decoration: none
+    text-decoration: none;
+    margin-right: 20px;
+}
+
+.whiteBtn {
+    border: 1px solid #5CC6D0;
+    background: white;
+    color: black;
+}
+
+.btn:hover {
+    transform: scale(1.1);
 }
 
 
@@ -100,7 +111,7 @@
     }
 
     .logo {
-        width: 30%;
+        width: 20%;
     }
 
 }
@@ -112,7 +123,7 @@
     }
 
     .logo {
-        width: 30%;
+        width: 20%;
     }
 }
 
@@ -123,7 +134,7 @@
     }
 
     .logo {
-        width: 30%;
+        width: 20%;
     }
 }
 
@@ -134,6 +145,6 @@
     }
 
     .logo {
-        width: 30%;
+        width: 20%;
     }
 }
