--- a/src/components/Hero/styles.module.css
+++ b/src/components/Hero/styles.module.css
@@ -39,8 +39,14 @@
 }
 
 .flex {
-    display: flex;
+    display: block;
     margin-top: 3rem;
+}
+
+.flex img {
+    width: 30%;
+    margin-bottom: 1rem;
+    display: block;
 }
 
 
