--- a/src/screens/styles.module.css
+++ b/src/screens/styles.module.css
@@ -22,7 +22,8 @@
     width: 100%;
     height: 3rem;
     border-radius: 10px;
-    border: 1px solid gainsboro
+    border: 1px solid gainsboro;
+    padding: .5rem 2rem;
 }
 
 .formContainer button {
@@ -32,4 +33,132 @@
     color: white;
     border: none;
     font-size: 1.3rem;
+}
+
+.imgContainer {
+    width: 100%;
+    height: auto;
+    display: block;
+    padding: .5rem;
+    text-align: center;
+}
+
+.imgContainer img {
+    width: 40%;
+}
+
+
+
+
+/* phone-only */
+@media (max-width: 599px) {
+
+    .formGrid {
+        grid-template-columns: 100%;
+        grid-gap: 0%;
+    }
+
+    .contents {
+        padding: 2rem 1rem;
+    }
+
+}
+
+/* .tablet-portrait-up  */
+@media (min-width: 600px) {
+    .formGrid {
+        grid-template-columns: 100%;
+        grid-gap: 0%;
+    }
+
+    .contents {
+        padding: 2rem 1rem;
+    }
+
+}
+
+/* tablet-portait-only */
+@media (min-width: 600px) and (max-width: 899px) {
+    .formGrid {
+        grid-template-columns: 100%;
+        grid-gap: 0%;
+    }
+
+    .contents {
+        padding: 2rem 1rem;
+    }
+
+}
+
+/* tablet-landscape-up */
+@media (min-width: 900px) {
+    .formGrid {
+        grid-template-columns: 100%;
+        grid-gap: 0%;
+    }
+
+    .contents {
+        padding: 2rem;
+    }
+
+}
+
+/* tablet-landscape-only */
+@media (min-width: 900px) and (max-width: 1199px) {
+    .formGrid {
+        grid-template-columns: 48% 48%;
+        grid-gap: 2%;
+    }
+
+    .contents {
+        padding: 3rem;
+    }
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+    .formGrid {
+        grid-template-columns: 48% 48%;
+        grid-gap: 2%;
+    }
+
+    .contents {
+        padding: 3rem;
+    }
+}
+
+/* .desktop-up */
+@media (min-width: 1300px) {
+    .formGrid {
+        grid-template-columns: 48% 48%;
+        grid-gap: 2%;
+    }
+
+    .contents {
+        padding: 5rem;
+    }
+}
+
+/* desktop-only */
+@media (min-width: 1300px) and (max-width: 1799px) {
+    .formGrid {
+        grid-template-columns: 48% 48%;
+        grid-gap: 2%;
+    }
+
+    .contents {
+        padding: 5rem;
+    }
+}
+
+/* big-desktop-up */
+@media (min-width: 1800px) {
+
+    .formGrid {
+        grid-template-columns: 48% 48%;
+        grid-gap: 2%;
+    }
+
+    .contents {
+        padding: 5rem;
+    }
 }
